--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:label="@string/app_name">
         <activity
             android:name=".UserProfileActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.Light.NoTitleBar"
+            android:windowSoftInputMode="adjustResize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
